[package]
name = "executor"
version = "0.1.0"
authors = ["whfuyn <whfuyn@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4"
log4rs = "0.13"
clap = "3.0.0-beta.2"
git-version = "0.3"
tonic = "0.2"
prost = "0.6"
prost-types = "0.6"
lazy_static = "1.4.0"
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time", "fs"] }
async-stream = "0.2"
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
parking_lot = "0.11"
thiserror = "1.0"
hex = "0.4"

[build-dependencies]
tonic-build = { version = "0.3" }
