[package]
name = "executor"
version = "0.2.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "*"
log4rs = { version = "*", features = ["gzip"] }
clap = "3.0.0-beta.2"
git-version = "*"
tonic = "*"
prost = "*"
prost-types = "*"
lazy_static = "*"
futures = "*"
tokio = { version = "*", features = ["full"] }
async-stream = "*"
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
parking_lot = "*"
thiserror = "*"
hex = "*"
rust-crypto = "*"
serde = "*" 
bincode = "*"
bytes = "*"

[build-dependencies]
tonic-build = { version = "*" }

[dev-dependencies]
tempdir = "*"
